# ion_reports

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.mlflow  README.md  RELEASE.md  SESSIONS.md  USAGE.md  docker-compose.coolify.yml  docker-compose.override.yml  docker-compose.prod.recommended.yml  docker-compose.prod.standalone.yml  docker-compose.prod.yml  docker-compose.recommended.yml  docker-compose.yml  feature_flags_summary.md  setup.ps1  setup.sh  sonar-project.properties
backend/: Dockerfile  README.md  pyproject.toml  strategy_config.yaml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/v1/: reports.py
backend/app/assets/: ion_nutri_report.md  vida_nova_report.md
backend/app/constants/: metabolite_constants.py  vidanova_constants.py
backend/app/core/: config.py  feature_flags.py  logging.py  mytypes.py  version.py
backend/app/db/: base.py  knowledge_graph_builder.py  neo4j_client.py  report_job_repository.py  unified_query.py
backend/app/domain/: kg_result.py  report.py  status.py
backend/app/domain/exam_configs/: __init__.py  base_config.py  ionnutri_config.py  vidanova_config.py
backend/app/plugins/: base.py  ionnutri_plugin.py  plugin_registry.py  vidanova_plugin.py
backend/app/plugins/prompts/: base.py  ionnutri_prompts.py  prompt_utils.py  vidanova_prompts.py
backend/app/schemas/: exam.py  patient_anamnesis.py  report_jobs.py  report_out.py
backend/app/scripts/: README.md  __init__.py
backend/app/scripts/load_data/: README.md  __init__.py  __main__.py  (+2 more)
backend/app/services/: llm_service.py  pdf_service.py  report_coordinator.py
backend/app/validators/: ontology_data_validator.py
backend/app/workers/: report_worker.py
backend/tests/: conftest.py
backend/tests/data/: ontology.json
backend/tests/e2e/: conftest.py  test_error_scenarios.py  test_full_pipeline.py
backend/tests/integration/: conftest.py  test_full_migration.py  test_report_coordinator_full_integration.py  test_report_coordinator_llm_integration.py  test_report_coordinator_neo4j_integration.py
backend/tests/performance/: conftest.py  test_performance.py
(+162 files in other folders)
